--- a/index.html
+++ b/index.html
@@ -58,20 +58,20 @@
 	</nav>
 		<ul class="list-group">
 			<label>Name</label>
-			<li class="list-group-item" id="text1"></li>
+			<li class="list-group-item" id="text1"><strong></strong></li>
 			<br>
 			<label>Gender</label>
-			<li class="list-group-item" id="text2"></li>
+			<li class="list-group-item" id="text2"><strong></strong></li>
 			<br>
 			<label>Titles</label>
-			<li class="list-group-item" id="text3"></li>
+			<li class="list-group-item" id="text3"><strong></strong></li>
 			<br>
 			<label>Played-By</label>
-			<li class="list-group-item" id="text4"></li>
+			<li class="list-group-item" id="text4"><strong></strong></li>
 		</ul>
 		<br>
 	    <br>
-		<button id="button">Display</button>
+		<button id="button"><strong>Display</strong></button>
 	</div>
 	<script>
 		document.getElementById('button').addEventListener('click',loadtext);
