--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
 	</nav>
 		<ul class="list-group">
 			<label>Name</label>
-			<li class="list-group-item" id="text1"><strong></strong></li>
+			<strong><li class="list-group-item" id="text1"></li></strong>
 			<br>
 			<label>Gender</label>
-			<li class="list-group-item" id="text2"><strong></strong></li>
+			<strong><li class="list-group-item" id="text2"></li></strong>
 			<br>
 			<label>Titles</label>
-			<li class="list-group-item" id="text3"><strong></strong></li>
+			<strong><li class="list-group-item" id="text3"></li></strong>
 			<br>
 			<label>Played-By</label>
-			<li class="list-group-item" id="text4"><strong></strong></li>
+			<strong><li class="list-group-item" id="text4"></li></strong>
 		</ul>
 		<br>
 	    <br>
